force-app/main/default/objects/Last_Release__c/Last_Release__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Last release installed</description>
    <label>Last Release</label>
</CustomObject>