force-app/main/default/objects/Last_Release__c/fields/Apex_Class_Setting__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Setting__c</fullName>
    <defaultValue>&quot;DEFAULT&quot;</defaultValue>
    <label>Apex Class Setting</label>
    <length>20</length>
    <type>Text</type>
</CustomField>