force-app/main/default/objects/Last_Release__c/fields/Disable_Email_Object_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Disable_Email_Object_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Use Central Email Object Check box in Email Service Page</description>
    <label>Disable Email Object Checkbox</label>
    <type>Checkbox</type>
</CustomField>