force-app/main/default/objects/Last_Release__c/fields/Release_SOI__c.field-meta.xml
<CustomField>
    <fullName>Release_SOI__c</fullName>
    <description>Last install release number for Std Objects Inc custom setting</description>
    <label>Release SOI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>